<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.UserActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proxima_bold"
        android:text="@string/my_activities"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/today"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_bold"
        android:text="@string/km"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tilRunningDistance"
        app:layout_constraintEnd_toEndOf="@+id/tilRunningDistance"
        app:layout_constraintTop_toTopOf="@+id/tilRunningDistance" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRunningDistance"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/running_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRunningDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montera_regular"
            android:inputType="number"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_bold"
        android:text="@string/km"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tilSwimmingDistance"
        app:layout_constraintEnd_toEndOf="@+id/tilSwimmingDistance"
        app:layout_constraintTop_toTopOf="@+id/tilSwimmingDistance" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSwimmingDistance"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/swimming_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilRunningDistance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSwimmingDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montera_regular"
            android:inputType="number"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_bold"
        android:text="@string/kcal"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tilCalories"
        app:layout_constraintEnd_toEndOf="@+id/tilCalories"
        app:layout_constraintTop_toTopOf="@+id/tilCalories" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCalories"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSwimmingDistance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montera_regular"
            android:inputType="number"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTotalDistanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/total_distance"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="@+id/tvToday"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

    <TextView
        android:id="@+id/tvTotalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/null_value"
        android:textColor="@color/dark_gray"
        android:textSize="54sp"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistanceTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalDistanceTitle"
        tools:text="10,000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/km"
        android:textColor="@color/dark_gray"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalDistance"
        app:layout_constraintStart_toEndOf="@+id/tvTotalDistance"
        app:layout_constraintTop_toTopOf="@+id/tvTotalDistance" />

    <TextView
        android:id="@+id/tvAvgRunDistanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/avg_swimming_running_distance"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistanceTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalDistance" />

    <TextView
        android:id="@+id/tvAvgRunDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/float_zero"
        android:textColor="@color/dark_gray"
        android:textSize="54sp"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistance"
        app:layout_constraintTop_toBottomOf="@+id/tvAvgRunDistanceTitle"
        tools:text="10,000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/km"
        android:textColor="@color/dark_gray"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAvgRunDistance"
        app:layout_constraintStart_toEndOf="@+id/tvAvgRunDistance"
        app:layout_constraintTop_toTopOf="@+id/tvAvgRunDistance" />

    <TextView
        android:id="@+id/tvAvgSwimDistanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/average_calories"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="@+id/tvAvgRunDistanceTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvAvgRunDistance" />

    <TextView
        android:id="@+id/tvAvgCaloriesConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/float_zero"
        android:textColor="@color/dark_gray"
        android:textSize="54sp"
        app:layout_constraintStart_toStartOf="@+id/tvAvgRunDistance"
        app:layout_constraintTop_toBottomOf="@+id/tvAvgSwimDistanceTitle"
        tools:text="10,000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/kcal"
        android:textColor="@color/dark_gray"
        android:textSize="54sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAvgCaloriesConsumed"
        app:layout_constraintStart_toEndOf="@+id/tvAvgCaloriesConsumed"
        app:layout_constraintTop_toTopOf="@+id/tvAvgCaloriesConsumed" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/proxima_bold"
        android:stateListAnimator="@null"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/tilCalories"
        app:layout_constraintTop_toBottomOf="@+id/tilCalories" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/proxima_bold"
        android:stateListAnimator="@null"
        android:text="@string/reset"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/save_button" />


</androidx.constraintlayout.widget.ConstraintLayout>